Serve require.js from webjars
I feel so good about it
Stealing is better than doing
https://github.com/MasseGuillaume/ScalaKata

Thanks Guillame!

--- a/src/main/webapp/templates-hidden/bootstrap.html
+++ b/src/main/webapp/templates-hidden/bootstrap.html
@@ -29,6 +29,8 @@
     <script src="http://fb.me/react-0.12.2.js"></script>
     <script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+    <!--<script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>-->
+    <script src="/webjars/require.min.js"></script>
 
 </head>
 
@@ -418,6 +420,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"><
 <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
 <script type="text/javascript" src="assets/plugins/prism/prism.js"></script>
 <script type="text/javascript" src="assets/js/main.js"></script>
+<script type="text/javascript" src="assets/js/scene/main.js"></script>
 </body>
 </html> 
 
