--- a/src/main/webapp/templates-hidden/bootstrap.html
+++ b/src/main/webapp/templates-hidden/bootstrap.html
@@ -28,9 +28,7 @@
     <![endif]-->
     <script src="http://fb.me/react-0.12.2.js"></script>
     <script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
-    <!--<script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>-->
-    <script src="/webjars/require.min.js"></script>
+    <script data-main="/assets/js/ng-main" src="/webjars/require.js"></script>
 
 </head>
 
@@ -413,14 +411,14 @@ allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"><
 </footer><!--//footer-->
 
 <!-- Javascript -->
-<script type="text/javascript" src="assets/plugins/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="assets/plugins/jquery.easing.1.3.js"></script>
+<!--<script type="text/javascript" src="assets/plugins/jquery-1.11.1.min.js"></script>-->
+<!--<script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>-->
+<!--<script type="text/javascript" src="assets/plugins/jquery.easing.1.3.js"></script>-->
+<!--<script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>-->
 <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
 <script type="text/javascript" src="assets/plugins/prism/prism.js"></script>
 <script type="text/javascript" src="assets/js/main.js"></script>
-<script type="text/javascript" src="assets/js/scene/main.js"></script>
+<!--<script type="text/javascript" src="assets/js/scene/main.js"></script>-->
 </body>
 </html> 
 
